--- a/src/contact.html
+++ b/src/contact.html
@@ -4,70 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>TourEth: Contact</title>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="here is the logo of the website" width="100px">
+        <img class="headerLogo" src="images/logo.png" alt="here is the logo of the website">
         <nav class = 'mainNav'>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="naturalFeatures.html">Natural Features</a></li>
+            <ul class = 'nav'>
+                <li class = 'navList'><a href="index.html">Home</a></li>
+                <li class = 'navList'><a href="about.html">About</a></li>
+                <li class = 'navList'><a href="naturalFeatures.html">Natural Features</a></li>
 
-                <li><a href="culturalSites.html">Cultural Sites</a></li>
-                <li><a href="historicalSites.html">Historical Sites</a></li>
-                <li><a href="religiousHeritages.html">Religious Heritages</a></li>
+                <li class = 'navList'><a href="culturalSites.html">Cultural Sites</a></li>
+                <li class = 'navList'><a href="historicalSites.html">Historical Sites</a></li>
+                <li class = 'navList'><a href="religiousHeritages.html">Religious Heritages</a></li>
 
-                <li><a href="contact.html">Contact</a></li>
+                <li class = 'navList' ><a id="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 <!----------------------------------------------------------------------------------------------------->
-<section>
-    <div>
-        <label for="info">User Information</label><br>
-        <form>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname"><br>
-            
-            <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email" cols="30"><br>
-            <label for="userMessage">Message:</label><br>
-            <textarea name="" id="" cols="30" rows="10"></textarea><br>
-            <button>Send</button>
+
+<!-- <div class="formPage"> -->
+<div class="form">
+    <div class="fixer">
+    <div id="contactForm">
+        <label for="info">User Information</label>
+        <form id="theForm">
+            <div class="inputs">
+            <div class="nameInput"> 
+                <div class="inputItem">
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname">
+                    <div class="error" id="error1"></div>
+                </div>
+                <div class="inputItem">
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" name="lname">
+                    <div class="error" id="error2"></div>
+                </div>
+            </div>
+            <div class="inputItem">
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" >
+            <div class="error" id="error3"></div></div>
+            <div class="inputItem">
+            <label for="userMessage">Message:</label>
+            <textarea name="message" id="message" ></textarea> 
+            <div class="error" id="error4"></div></div>
+            </div>
+            <button type="submit" id="contactButton">Submit</button>
           </form>
     </div>
-</section>
-<div>
-    <img src="images/locationpin.png" alt="location pin icon" width="40px">
-    <h3>Adress</h3>
-    <p>Arat Kilo, Addis Ababa<br> Ethiopia</p>
 </div>
-<div>
-    <img src="images/phone.png" alt="phone icon" width="40px">
-    <h3>Phone</h3>
-    <p>+251-938-479-567</p>
+    <div class="onTop"> 
+        <div class="card">
+            <img src="images/locationpin.png" alt="location pin icon" width="40px">
+            <h3>Adress</h3>
+            <p>Arat Kilo <br> Addis Ababa</p>
+        </div>
+        <div class="card">
+            <img src="images/phone.png" alt="phone icon" width="40px">
+            <h3>Phone</h3>
+            <p>+251-938-479-567</p>
+        </div>
+        <div class="card">
+            <img src="images/email.png" alt="email icon" width="40px">
+            <h3>Email</h3>
+            <p><a href="mail-to:mt@gamil.com" target="_blank">mt@gmail.com</a></p>
+        
+        </div>
+        <footer id="footer">
+            <div class="helper">
+                <div class="footerElement"> <img src="images/copyright.png" width="10px" alt="copyright icon">
+                    <label for="">2022 TourEth. All rights reserved</label></div>
+                     <div class="footerElement">
+                    <div id="social"> <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt="here is a youtube icon" width="20px"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/fb.png" alt="here is a facebook icon" width="20px"></a>
+                    <a href="https://twitter.com/" target="_blank"><img src="images/twtr.png" alt="here is a twitter icon" width="20px"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="images/insta.png" alt="here is an instagram icon" width="20px"></a></div><label>follow us</label></div>
+                    <div class="footerElement"> </div>
+            </div>
+        </footer>
+    </div>
+<!-- </div> -->
 </div>
-<div>
-    <img src="images/email.png" alt="email icon" width="40px">
-    <h3>Email</h3>
-    <p><a href="mail-to:milliontolessa@gamil.com" target="_blank">milliontolessa@gmail.com</a></p>
 
-</div>
 <!----------------------------------------------------------------------------------------------------->    
-<footer>
-    <img src="images/copyright.png" width="10px" alt="copyright icon">
-    <label>2022</label>
-    <label>TourEth. All rights reserved</label>
-    <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt="here is a youtube icon" width="20px"></a>
-    <a href="https://www.facebook.com/" target="_blank"><img src="images/fb.png" alt="here is a facebook icon" width="20px"></a>
-    <a href="https://twitter.com/" target="_blank"><img src="images/twtr.png" alt="here is a twitter icon" width="20px"></a>
-    <a href="https://www.instagram.com/" target="_blank"><img src="images/insta.png" alt="here is an instagram icon" width="20px"></a>
-    <label>follow us</label>
-</footer>
+
 
 </body>
 </html>
