--- a/src/culturalSites.html
+++ b/src/culturalSites.html
@@ -56,7 +56,7 @@
     <div class="history" id="audioDiv">
         <label for="audio">Here's a traditional Hamar Song:</label>
         <audio controls>   
-            <source src="audios/Hamar.mp3" type="audio/mpeg">
+            <source src="audios/Hamar.MP3" type="audio/mpeg">
         </audio>
     </div>
         
